fix text color in dark mode for $toast.error()

--- a/assets/defaults.sass
+++ b/assets/defaults.sass
@@ -251,6 +251,7 @@ $bk-sidebar: 650px
     color: var(--white)
     &.error
         background-color: var(--red)
+        color: white
     &.success
         background-color: var(--green)
     &.info
